# VideoSegment

./: .gitignore  CMakeLists.txt  README.md
cmake/: ReplicatePythonSourceTree.cmake
cython/: CMakeLists.txt  py_video_segment.pyx  setup.cfg  setup.py
cython/py_method_accuracy/: py_method_accuracy.pyx  testmod.py
cython/py_opencv/: py_opencv.pyx
cython/py_user_divide/: py_user_divide.pyx  testmod.py
cython/py_utils/: vector_numpy.pyx
lib/: CMakeLists.txt
lib/evenly_divide/: evenly_divide.cpp  evenly_divide_test.cpp
lib/interfaces/: segmenter_interface.h
lib/method_accuracy/: method_accuracy_test.cpp
lib/programs/: CMakeLists.txt  select_frames.cpp
lib/user_divide/: user_divide.cpp  user_divide.h  user_divide_test.cpp
lib/video_marker/: video_marker.cpp
python/: annotate.py  cython_demo.ipynb  extractor.py  hdf5_writer.py  read_video.py  read_video_chunk.ipynb  segment_video.ipynb  unsupervised_clustering.ipynb  video_annotate.py  video_helper.py
python/notebooks/: cython_demo.ipynb  histogram_plot.ipynb  unsupervised_clustering.ipynb
python/segment_gui/: annotate.py  extractor.py  rectangle_select.py  segment_frames.py  video_annotate.py
python/segment_utils/: README.md  annotate.py  drawable_rectangle.py  extractor.py  hasher.py  hdf5_writer.py  three_cubes.pkl
src/: CMakeLists.txt
src/aoi_selector/: aoi_selector_test.cpp
src/cpp/: CMakeLists.txt  evenly_divide.cpp  evenly_divide.h  evenly_divide.hpp  pyuser_divide.pyx  segmenter_interface.h  segmenter_interface.hpp  setup.py  user_divide.cpp  user_divide.h  video_marker.cpp  video_marker.h
src/cpp/programs/: CMakeLists.txt  select_frames.cpp
src/evenly_divide/: evenly_divide.cpp  evenly_divide.h
src/interfaces/: segmenter_interface.h
src/method_accuracy/: method_accuracy.h
src/programs/: select_frames.cpp
src/user_divide/: user_divide.cpp  user_divide.h
src/video_loader/: video_loader_test.cpp
src/video_marker/: video_marker.cpp  video_marker.h  video_marker_test.cpp
test/cpp/: CMakeLists.txt  evenly_dividetest.cpp  user_dividetest.cpp  video_markertest.cpp
